# NYC-Taxi-Duration-Prediction

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
iac/: Makefile
iac/ansible/: deploy_mlflow.yaml  inventory.ini
iac/terraform/: .terraform.lock.hcl  main.tf  variables.tf
