[tool.poetry]
name = "nyc-taxi-duration-prediction"
version = "0.1.0"
description = ""
authors = ["tnhgiang <giang.tnhoang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^4.0.1"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
